--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SimpleJSGui",
+  "name": "simplejsgui",
   "version": "1.0.0",
   "description": "",
   "main": "simplejsgui.js",
@@ -10,11 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.1",
     "gulp-watch": "^5.0.0",
     "postcss-import": "^11.0.0",
     "postcss-nested": "^3.0.0",
-    "postcss-simple-vars": "^4.1.0"
+    "postcss-simple-vars": "^4.1.0",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0"
   }
 }
